tests/error/library_errors/generic_entrypoint.err
Error: Invalid entry point (at $FILE:8:0)
  | 
6 | 
7 | @guppy
8 | def func(x: T @ comptime) -> array[T, 3]:
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
9 |     return array(x for _ in range(3))
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Function `func` is not a valid compilation entry point since
  |                                       the value of generic parameter `x: T` is not known

Guppy compilation failed due to 1 previous error
